# accrete-starform-stargen

./: .gitignore  README.md  TODO  TODO.md  build.gradle  scalastyle_config.xml  settings.gradle  versions.gradle
buildSrc/: build.gradle
docs/: AUTHORS  AUTHORS.md  Mat Burdick - README  TIMELINE.md  TODO  authors - by branch.md  authors - by source year.md  authors.md  people.md  sites.md
docs/cliff notes/: ftp sites.md
docs/misc/: Traveller SRD v1.1.doc
docs/model/: 1988 - budick_gilham accrete.shar  1993 - burdick_malloy starform.shar  1993 - burdick_ste starform.shar  1993 - ste psuedo code.txt  authors.md
docs/models/: 1993 - Matt Burdick & Sean Malloy - Starform - README.txt  1995 - Andrew Folkins - Accretion - README.txt  1997 - Christopher E. Webb - Accrete2 - READ.ME  1997 - Christopher E. Webb - Accrete3 - READ.ME  2000 - Keris - Accretion v2 - README.txt  2003 - Chuck Swiger - Accrete - README.txt  2012 - sveco - Accrete - README.md  2013 - Brandon Amaro - Stargen - ReadMe.txt  2013 - Daniel Lyons - Starform - README  2013 - Graham Reeds - Stargen - ReadMe.txt  2013 - Kennon Ballou - Accrete - README.md  2014 - Brandon Amaro - Stargen - README.md  2014 - Joseph Heck - Stargen - ReadMe.txt  authors.md  (+5 more)
docs/notes/: sites.md  (+1 more)
originals/amaro/src/main/cpp/: .gitignore  CMakeLists.txt  display.h  ring_universe.h  stargen.h  stargen_2013.kdev4  utils.cpp
originals/amaro/src/main/cpp/help/: StarGen User's Manual.htm  help.txt
originals/amaro/src/main/cpp/ref/: Key.html
pro-accrete-starform-stargen/: .classpath  .project
recreation/: build.gradle
(+2025 files in other folders)
